--- a/CHANGES
+++ b/CHANGES
@@ -451,6 +451,7 @@ https://github.com/PanDAWMS/pilot/pull/241.diff
 
 IPv6
 - New version of Rucio function detect_client_location() that is IPv6 compatible has been added (pilot)
+- Deprecated detect_client_location() in pilot, updated duplicated function in mover code (pilot, mover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
