--- a/CHANGES
+++ b/CHANGES
@@ -455,6 +455,13 @@ IPv6
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.15
+
+IPv6
+- Some cleanup related to the detect_client_location() function (pilot, mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
