Discarding @-info from cmtconfig used for user defined containers (Pilot 2)

--- a/CHANGES
+++ b/CHANGES
@@ -457,6 +457,9 @@ IPv6
 
 73.15
 
+User defined containers
+- Discarding any @-syntax in cmtconfig if present (used for user defined containers; ALRB_USER_PLATFORM encoded in cmtconfig)
+
 IPv6
 - Some cleanup related to the detect_client_location() function (pilot, mover)
 
