Started working on looping job killer update

--- a/CHANGES
+++ b/CHANGES
@@ -478,6 +478,15 @@ M movers/mover.py (8)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.16
+
+Looping job update:
+- Fixing a bug in __loopingJobKiller() which now identifies the most recently modified file and sets lastTimeFilesWereModified which will be compared to the current
+  time (Monitor)
+- NOTE: update get_time_for_last_touch() in Pilot 2 as well
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
