Added NOPROXY error code to list in shellExitCode()

--- a/CHANGES
+++ b/CHANGES
@@ -500,6 +500,9 @@ maxwdir:
 getJobStatus:
 - Fixed undefined variable in exception handling in getJobStatus() (pUtil)
 
+No shell code returned for proxy error
+- Added NOPROXY error code to list in shellExitCode (pUtil)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 TODO:
