Improved exception handling around usage of troublesome getctime

--- a/CHANGES
+++ b/CHANGES
@@ -505,6 +505,14 @@ No shell code returned for proxy error
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.17
+
+Exceptions in looping job killer
+- Protection for exception in find_latest_modified_file() if file no longer exists (Monitor)
+- Created verified_files(), used by get_files() and find_latest_modified_file() (FileHandling)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
