Added merged_lhef* and Process to redundant files list, to be removed before job log is created

--- a/CHANGES
+++ b/CHANGES
@@ -513,6 +513,13 @@ Exceptions in looping job killer
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.18
+
+Job log
+- Added merged_lhef* and Process to redundant files list, to be removed before job log is created (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
