--- a/CHANGES
+++ b/CHANGES
@@ -516,7 +516,7 @@ Exceptions in looping job killer
 73.18
 
 Job log
-- Added merged_lhef* and Process to redundant files list, to be removed before job log is created (ATLASExperiment)
+- Added merged_lhef._0.events-new and Process to redundant files list, to be removed before job log is created (ATLASExperiment)
 
 Looping job killer
 - Changed from getctime() to getmtime() in find_latest_modified_file() (FileHandling)
